--- a/src/index.html
+++ b/src/index.html
@@ -81,13 +81,13 @@
 		</div>
 	</section>
 
-    <div class="plastic-waste title title_green">
+	<div class="plastic-waste title title_green">
 		<div class="container">
 			Designed to reduce single-use<br> plastic waste in your daily routine.<br> Scientifically-proven to perform.
 		</div>
 	</div>
 
-    <section class="sets">
+	<section class="sets">
 		<div class="container">
 			<div class="sets__wrapper">
 				<div class="sets__item sets__item_1">
@@ -133,7 +133,7 @@
 	</section>
 
 
-    <sectiion class="ecolog">
+	<sectiion class="ecolog">
 		<div class="container">
 			<div class="ecolog__wrapper">
 				<div class="ecolog__item ecolog__item_1"></div>
@@ -180,28 +180,90 @@
 		</div>
 	</sectiion>
 
-
-
-
-    <section class="bathroom">
+<!--  задати питання щодо класів в каруселі -->
+	<div id="carouselExample" class="carousel slide">
 		<div class="container">
-			<div class="bathroom__inner">
-				<div class="bathroom__item">
-					<div class="title title_lightgreen">
-						Teen Vogue
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div class="bathroom__item">
+						<div class="title title_lightgreen">
+							Teen Vogue
+						</div>
+						<div class="bathroom__descr title title_fz56 title_green">
+							"Beautifully designed bathroom essentials in solid, no-waste packaging and refillable containers."
+						</div>
+						<div class="bathroom__landing title title_fz24 title_green">
+							See All Press
+						</div>
 					</div>
-					<div class="bathroom__descr title title_fz56 title_green">
-						"Beautifully designed bathroom essentials in solid, no-waste packaging and refillable containers."
+				</div>
+				<div class="carousel-item">
+					<div class="bathroom__item">
+						<div class="title title_lightgreen">
+							Business Insider
+						</div>
+						<div class="bathroom__descr title title_fz56 title_green">
+							"by Humankind's natural formulas were designed to pass performance tests."
+						</div>
+						<div class="bathroom__landing title title_fz24 title_green">
+							See All Press
+						</div>
 					</div>
-					<div class="bathroom__landing title title_fz24 title_green">
-						See All Press
+				</div>
+				<div class="carousel-item">
+					<div class="bathroom__item">
+						<div class="title title_lightgreen">
+							Fast Company
+						</div>
+						<div class="bathroom__descr title title_fz56 title_green">
+							"This new personal care company ditches single-use plastic for refillable containers."
+						</div>
+						<div class="bathroom__landing title title_fz24 title_green">
+							See All Press
+						</div>
+					</div>
+				</div>
+                <div class="carousel-item">
+					<div class="bathroom__item">
+						<div class="title title_lightgreen">
+							People
+						</div>
+						<div class="bathroom__descr title title_fz56 title_green">
+							"Make sure to grab a by Humankind hand sanitizer before they sell out."
+						</div>
+						<div class="bathroom__landing title title_fz24 title_green">
+							See All Press
+						</div>
+					</div>
+				</div>
+                <div class="carousel-item">
+					<div class="bathroom__item">
+						<div class="title title_lightgreen">
+							Domino
+						</div>
+						<div class="bathroom__descr title title_fz56 title_green">
+                            "You’re about to hear a whole lot about by Humankind, if you haven’t already."
+						</div>
+						<div class="bathroom__landing title title_fz24 title_green">
+							See All Press
+						</div>
 					</div>
 				</div>
 			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-	</section>
+	</div>
 
-    <section class="sets">
+
+
+	<section class="sets">
 		<div class="container">
 			<div class="sets__wrapper">
 				<div class="sets__item sets__item_7">
@@ -246,7 +308,7 @@
 		</div>
 	</section>
 
-    <section class="shampoo">
+	<section class="shampoo">
 		<div class="container">
 			<div class="title title_fz72 title_green shampoo__title">
 				“The shampoo bar works so freaking good and smells amazing!”
@@ -254,7 +316,7 @@
 		</div>
 	</section>
 
-    <section class="shampoobar">
+	<section class="shampoobar">
 		<div class="container">
 			<div class="divider"></div>
 			<div class="shampoobar__wrapper">
@@ -275,7 +337,7 @@
 		</div>
 	</section>
 
-    <section class="future">
+	<section class="future">
 		<div class="container">
 			<div class="future__wrapper">
 				<div class="title title_fz56 title_green future__title">
@@ -291,7 +353,7 @@
 	</section>
 	
 
-    <footer class="footer">
+	<footer class="footer">
 		<div class="container">
 			<div class="footer__wrapper">
 				<div class="footer__item">
@@ -346,6 +408,8 @@
 			</div>
 		</div>
 	</footer>
+
+
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 	<script src="js/script.js"></script>
