--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
 	</section>
 
 
-	<sectiion class="ecolog">
+	<section class="ecolog">
 		<div class="container">
 			<div class="ecolog__wrapper">
 				<div class="ecolog__item ecolog__item_1"></div>
@@ -178,7 +178,7 @@
 			</div>
 			<div class="divider"></div>
 		</div>
-	</sectiion>
+	</section>
 
 <!--  задати питання щодо класів в каруселі -->
 	<div id="carouselExample" class="carousel slide">
